# salary_aggregation

./: .dockerignore  README.md  compose.yml
salary/: Dockerfile  pyproject.toml
salary/src/: main.py
salary/src/api/bot/: __init__.py  loader.py  main.py
salary/src/api/bot/commands/: payments.py  start.py
salary/src/config/: bot.py  mongo.py
salary/src/database/mongo/: connection.py  model.py
salary/src/domain/abc/: dal.py
salary/src/domain/payment/: dal.py  dto.py  model.py  service.py
salary/src/domain/payment/dal/: dao.py
salary/src/domain/payment/dal/constructor/: sum_by_period.py
salary/src/domain/payment/dal/pipeline/: sum_by_period.py
salary/src/domain/period/: dto.py
