[tool.poetry]
name = "salary"
version = "0.1.0"
description = ""
authors = ["WATUNeed <maxconal228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beanie = "^1.26.0"
pydantic-settings = "^2.2.1"
aiogram = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
